--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/oeolamiju/powerBI_Dashboards">Power BI Projects Inolving Dashboard Design, Visualizations And Insights<br />
+										<h2><a href="https://www.novypro.com/project/comparative-analysis-of-birth-rate-and-associated-factors-across-europe-and-asia">Power BI Projects Inolving Dashboard Design, Visualizations And Insights<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/oeolamiju/powerBI_Dashboards" class="image fit"><img src="images/bi.jpg" alt="" /></a>
+									<a href="https://www.novypro.com/project/comparative-analysis-of-birth-rate-and-associated-factors-across-europe-and-asia" class="image fit"><img src="images/bi.jpg" alt="" /></a>
 									<p> The included Power BI dashboard offers a user-friendly, single-screen interface highlighting the top 5 countries in Asia and 
-										Europe with the highest birth rates. The dashboard successfully compares birth rate progression, showcasing Norway as the highest in Europe (12.11) and forecasting trends for the next decade. Other Dashboards are also included.</p>
+										Europe with the highest birth rates. The dashboard successfully compares birth rate progression, showcasing Norway as the highest in Europe (12.11) and forecasting trends for the next decade.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/oeolamiju/powerBI_Dashboards" class="button">View Dashboards</a></li>
+										<li><a href="https://www.novypro.com/project/comparative-analysis-of-birth-rate-and-associated-factors-across-europe-and-asia" class="button">View Dashboards</a></li>
 									</ul>
 								</article>
 							</section>
